@@ -15,7 +15,7 @@
     {
       "name": "RAYGUI_VERSION_MINOR",
       "type": "INT",
-      "value": 0,
+      "value": 1,
       "description": ""
     },
     {
@@ -27,7 +27,7 @@
     {
       "name": "RAYGUI_VERSION",
       "type": "STRING",
-      "value": "4.0",
+      "value": "4.1-dev",
       "description": ""
     },
     {
