@@ -53,6 +53,7 @@
     , "MATERIAL_MAP_SPECULAR" : null
     , "SHADER_LOC_MAP_DIFFUSE" : null
     , "SHADER_LOC_MAP_SPECULAR" : null
+    , "GetMouseRay" : null
     , "RAYMATH_H" : null
     , "RMAPI" : null
     , "EPSILON" : "0.000001"
@@ -62,7 +63,7 @@
     , "CAMERA_CULL_DISTANCE_NEAR" : null
     , "CAMERA_CULL_DISTANCE_FAR" : null
     , "RLGL_H" : null
-    , "RLGL_VERSION" : "\"4.5\""
+    , "RLGL_VERSION" : "\"5.0\""
     , "TRACELOG" : null
     , "TRACELOGD" : null
     , "GRAPHICS_API_OPENGL_33" : null
@@ -173,6 +174,12 @@
     , "MAX_CHAR_PRESSED_QUEUE" : "16"
     , "MAX_DECOMPRESSION_SIZE" : "64"
     , "MAX_AUTOMATION_EVENTS" : "16384"
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_POSITION" : "0"
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD" : "1"
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_NORMAL" : "2"
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_COLOR" : "3"
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_TANGENT" : "4"
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD2" : "5"
     , "RL_DEFAULT_SHADER_ATTRIB_NAME_POSITION" : "\"vertexPosition\""
     , "RL_DEFAULT_SHADER_ATTRIB_NAME_TEXCOORD" : "\"vertexTexCoord\""
     , "RL_DEFAULT_SHADER_ATTRIB_NAME_NORMAL" : "\"vertexNormal\""
@@ -198,9 +205,7 @@
     , "SUPPORT_IMAGE_GENERATION" : "1"
     , "SUPPORT_IMAGE_MANIPULATION" : "1"
     , "SUPPORT_DEFAULT_FONT" : "1"
-    , "SUPPORT_FILEFORMAT_FNT" : "1"
     , "SUPPORT_FILEFORMAT_TTF" : "1"
-    , "SUPPORT_FILEFORMAT_BDF" : "1"
     , "SUPPORT_TEXT_MANIPULATION" : "1"
     , "SUPPORT_FONT_ATLAS_WHITE_REC" : "1"
     , "MAX_TEXT_BUFFER_LENGTH" : "1024"
@@ -229,9 +234,9 @@
     , "MAX_TRACELOG_MSG_LENGTH" : "256"
     , "RAYGUI_H" : null
     , "RAYGUI_VERSION_MAJOR" : "4"
-    , "RAYGUI_VERSION_MINOR" : "0"
+    , "RAYGUI_VERSION_MINOR" : "1"
     , "RAYGUI_VERSION_PATCH" : "0"
-    , "RAYGUI_VERSION" : "\"4.0\""
+    , "RAYGUI_VERSION" : "\"4.1-dev\""
     , "RAYGUIAPI" : null
     , "RAYGUI_MALLOC" : null
     , "RAYGUI_CALLOC" : null
