@@ -47,12 +47,18 @@ module Raylib
   RL_MAX_SHADER_LOCATIONS = 32                                # Maximum number of shader locations supported
   RL_CULL_DISTANCE_NEAR = 0.01                                # Default projection matrix near cull distance
   RL_CULL_DISTANCE_FAR = 1000.0                               # Default projection matrix far cull distance
-  RL_DEFAULT_SHADER_ATTRIB_NAME_POSITION = "vertexPosition"   # Bound by default to shader location: 0
-  RL_DEFAULT_SHADER_ATTRIB_NAME_TEXCOORD = "vertexTexCoord"   # Bound by default to shader location: 1
-  RL_DEFAULT_SHADER_ATTRIB_NAME_NORMAL = "vertexNormal"       # Bound by default to shader location: 2
-  RL_DEFAULT_SHADER_ATTRIB_NAME_COLOR = "vertexColor"         # Bound by default to shader location: 3
-  RL_DEFAULT_SHADER_ATTRIB_NAME_TANGENT = "vertexTangent"     # Bound by default to shader location: 4
-  RL_DEFAULT_SHADER_ATTRIB_NAME_TEXCOORD2 = "vertexTexCoord2" # Bound by default to shader location: 5
+  RL_DEFAULT_SHADER_ATTRIB_LOCATION_POSITION = 0
+  RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD = 1
+  RL_DEFAULT_SHADER_ATTRIB_LOCATION_NORMAL = 2
+  RL_DEFAULT_SHADER_ATTRIB_LOCATION_COLOR = 3
+  RL_DEFAULT_SHADER_ATTRIB_LOCATION_TANGENT = 4
+  RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD2 = 5
+  RL_DEFAULT_SHADER_ATTRIB_NAME_POSITION = "vertexPosition"   # Bound by default to shader location: RL_DEFAULT_SHADER_ATTRIB_LOCATION_POSITION
+  RL_DEFAULT_SHADER_ATTRIB_NAME_TEXCOORD = "vertexTexCoord"   # Bound by default to shader location: RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD
+  RL_DEFAULT_SHADER_ATTRIB_NAME_NORMAL = "vertexNormal"       # Bound by default to shader location: RL_DEFAULT_SHADER_ATTRIB_LOCATION_NORMAL
+  RL_DEFAULT_SHADER_ATTRIB_NAME_COLOR = "vertexColor"         # Bound by default to shader location: RL_DEFAULT_SHADER_ATTRIB_LOCATION_COLOR
+  RL_DEFAULT_SHADER_ATTRIB_NAME_TANGENT = "vertexTangent"     # Bound by default to shader location: RL_DEFAULT_SHADER_ATTRIB_LOCATION_TANGENT
+  RL_DEFAULT_SHADER_ATTRIB_NAME_TEXCOORD2 = "vertexTexCoord2" # Bound by default to shader location: RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD2
   RL_DEFAULT_SHADER_UNIFORM_NAME_MVP = "mvp"                  # model-view-projection matrix
   RL_DEFAULT_SHADER_UNIFORM_NAME_VIEW = "matView"             # view matrix
   RL_DEFAULT_SHADER_UNIFORM_NAME_PROJECTION = "matProjection" # projection matrix
@@ -72,9 +78,7 @@ module Raylib
   SUPPORT_IMAGE_GENERATION = 1
   SUPPORT_IMAGE_MANIPULATION = 1
   SUPPORT_DEFAULT_FONT = 1
-  SUPPORT_FILEFORMAT_FNT = 1
   SUPPORT_FILEFORMAT_TTF = 1
-  SUPPORT_FILEFORMAT_BDF = 1
   SUPPORT_TEXT_MANIPULATION = 1
   SUPPORT_FONT_ATLAS_WHITE_REC = 1
   MAX_TEXT_BUFFER_LENGTH = 1024                               # Size of internal static buffers used on some functions:
