@@ -12,9 +12,9 @@ module Raylib
   # Define/Macro
 
   RAYGUI_VERSION_MAJOR = 4
-  RAYGUI_VERSION_MINOR = 0
+  RAYGUI_VERSION_MINOR = 1
   RAYGUI_VERSION_PATCH = 0
-  RAYGUI_VERSION = "4.0"
+  RAYGUI_VERSION = "4.1-dev"
   SCROLLBAR_LEFT_SIDE = 0
   SCROLLBAR_RIGHT_SIDE = 1
 
